# pikpaktui

./: .gitignore  Cargo.toml  LICENSE  README.md  THUMBNAIL_IMPLEMENTATION.md  install.sh  v2ex_post_images.md
.github/workflows/: build.yml  docs.yml
docs/: README.md  cli.md  configuration.md  docs.config.ts  getting-started.md  project-structure.md  shell-completions.md  tui.md
docs/cli/: commands.md  index.md
docs/vitepress/: index.md  package-lock.json  package.json
docs/vitepress/.vitepress/: config.mts
docs/vitepress/.vitepress/theme/: custom.css
docs/vitepress/cli/: commands.md  index.md
docs/vitepress/guide/: configuration.md  getting-started.md  shell-completions.md  tui.md
docs/vitepress/zh/: index.md
docs/vitepress/zh-Hant/: index.md
docs/vitepress/zh-Hant/cli/: commands.md  (+1 more)
docs/zh/: configuration.md  getting-started.md  shell-completions.md  tui.md
docs/zh-Hant/: configuration.md  getting-started.md  shell-completions.md  tui.md
docs/zh-Hant/cli/: commands.md  index.md
docs/zh/cli/: commands.md  index.md
examples/: test_iterm2_fix.rs  test_protocol_selection.rs  test_thumbnail.rs
scripts/: release.sh
skills/pikpak/: SKILL.md
src/: backend.rs  config.rs  main.rs  pikpak.rs  theme.rs  tui.rs
src/cmd/: cat.rs  complete_path.rs  completions.rs  cp.rs  download.rs  empty.rs  events.rs  help.rs  info.rs  link.rs  login.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  offline.rs  play.rs  quota.rs  rename.rs  rm.rs  save_share.rs  search.rs  share.rs  share_info.rs  star.rs  starred.rs  tasks.rs  trash.rs  unstar.rs  untrash.rs  update.rs  upload.rs  vip.rs
src/native/: auth.rs  mod.rs
src/pikpak/: account.rs  auth.rs  download.rs  drive.rs  file_info.rs  files.rs  mod.rs  models.rs  offline.rs  responses.rs  share.rs  upload.rs
src/tui/: completion.rs  download.rs  download_view.rs  draw.rs  handler.rs  image_render.rs  local_completion.rs  mod.rs  widgets.rs
(+10 files in other folders)
