[package]
name = "pikpaktui"
version = "0.0.32"
edition = "2024"
description = "A TUI and CLI client for PikPak cloud storage"
license = "Apache-2.0"
repository = "https://github.com/Bengerthelorf/pikpaktui"
keywords = ["tui", "pikpak", "cloud-storage", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.30.0"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_yaml = "0.9.34-deprecated"
toml = "0.9.8"
sha1 = "0.10"
hmac = "0.12"
base64 = "0.22"
unicode-width = "0.2"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy", "plist-load"] }
image = "0.25"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
